@@ -2,10 +2,12 @@
 TSDuck Change Log and Release Notes
 ===================================
 
-Version 3.2-20170824
+Version (next)
 
 - Improved robustness of DVB tuner reception on Windows. Explicitly
   resynchronizes on valid packets when the driver misses data.
+
+- Adjusted output of tslsdvb on Windows to better identify tuner names.
 
 Version 3.2-20170528
 
